fix slider behaviour when overflow occurs

--- a/app/blocks/develop/about/about.scss
+++ b/app/blocks/develop/about/about.scss
@@ -7,6 +7,8 @@
   }
 
   &.swiper {
+    $swiper: &;
+
     &-container-horizontal > .swiper-pagination-bullets,
     &-pagination-custom,
     &-pagination-fraction {
