--- a/app/blocks/develop/slide/slide.scss
+++ b/app/blocks/develop/slide/slide.scss
@@ -104,6 +104,7 @@
     min-width: $min-width;
     max-width: $max-width;
     min-height: inherit;
+    height: 100%;
 
     @include margin-x(auto);
     @include padding-x($offset--desktop);
@@ -199,6 +200,12 @@
       @include media-breakpoint-up(lg) {
         min-width: 240px;
       }
+    }
+  }
+
+  &.swiper {
+    &-slide {
+      height: initial;
     }
   }
 }
